# nng_adaptor

./: .gitignore  CMakeLists.txt  README.md  demo.cpp
include/nng_adaptor/: deserializer.h  md5_traits.h  nng_adaptor.h  serializer.h
proto/: TestMsg.proto
